NET-494: fix enforcement of /reading maximum results.